<resources>
    <string name="app_name">MyShop</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="orders">Orders</string>
    <string name="users">Users</string>

    <string name="login">Login</string>
    <string name="signup">Signup</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="select_user_type">Select User Type</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="postcode">Postcode</string>
    <string name="address">Address</string>
    <string name="add_user_button">Add User Button</string>
    <string name="add_user">Add User</string>
    <string name="update_user_button">Update User Button</string>
    <string name="update_user">Update User</string>
    <string name="add_category_button">Add Category Button</string>
    <string name="add_product_button">Add Product Button</string>
    <string name="logout">Log out</string>
    <string name="delete">Delete</string>
    <string name="user_details">User Details</string>
    <string name="price_details">Price Details</string>
    <string name="total_amount">Total Amount</string>
    <string name="selling_price">Selling Price</string>
    <string name="list_price">List Price</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="my_orders">My Orders</string>
    <string name="order_details">Order Details</string>
    <string name="save">Save</string>
    <string name="add_category">Add Category</string>
    <string name="update_category">Update Category</string>
    <string name="update_product">Update Product</string>
    <string name="category_details">Category Details</string>
    <string name="product_details">Product Details</string>
    <string name="update">Update</string>
    <string name="add_product">Add Product</string>
    <string name="description">Description</string>
    <string name="retail_price">Retail Price</string>
    <string name="price">Price</string>
    <string name="product_name">Product Name</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy now</string>
    <string name="remove">Remove</string>
    <string name="cart_is_empty">Cart is empty!</string>
    <string name="no_products">No products!</string>
    <string name="no_categories">No categories!</string>
    <string name="no_users">No users!</string>
    <string name="go_to_cart">Go to cart</string>
    <string name="save_address">Save Address</string>
    <string name="road_name_area_colony">Road name, Area, Colony</string>
    <string name="house_no_building_name">House No, Building Name</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="deliver_to">Deliver to:</string>
    <string name="check_out">Checkout</string>
    <string name="no_orders">No orders!</string>
    <string name="read_external_storage_permission_explain_msg">We need external storage permission to read images.</string>

    <string-array name="user_type_list">
        <item>Admin</item>
        <item>User</item>
    </string-array>
</resources>