<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_mobile_navigation"
    app:startDestination="@+id/admin_navigation_home">

    <fragment
        android:id="@+id/admin_navigation_home"
        android:name="projects.android.myshop.ui.home.AdminHomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_admin_home">


        <action
            android:id="@+id/action_admin_navigation_home_to_admin_navigation_products"
            app:destination="@id/admin_navigation_products"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />


        <action
            android:id="@+id/action_admin_navigation_home_to_admin_navigation_product_details"
            app:destination="@id/admin_navigation_products"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

        <action
            android:id="@+id/action_admin_navigation_categories_to_admin_navigation_products"
            app:destination="@id/admin_navigation_products"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />


        <action
            android:id="@+id/action_admin_navigation_categories_to_admin_navigation_product_details"
            app:destination="@id/admin_navigation_products"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

    </fragment>

    <fragment
        android:id="@+id/admin_navigation_categories"
        android:name="projects.android.myshop.ui.category.AdminCategoriesFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_admin_categories" />

    <fragment
        android:id="@+id/admin_navigation_orders"
        android:name="projects.android.myshop.ui.order.AdminOrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_admin_orders" />

    <fragment
        android:id="@+id/admin_navigation_users"
        android:name="projects.android.myshop.ui.user.AdminUsersFragment"
        android:label="@string/users"
        tools:layout="@layout/fragment_admin_users" />

    <activity
        android:id="@+id/admin_navigation_products"
        android:name="projects.android.myshop.ui.product.AdminProductsActivity"
        tools:layout="@layout/activity_admin_products" />

    <activity
        android:id="@+id/admin_navigation_product_details"
        android:name="projects.android.myshop.ui.product.AdminProductsActivity"
        tools:layout="@layout/activity_admin_product_details" />


</navigation>
