<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.login.LoginFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="50dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_type_input_layout"
            style="?attr/textInputOutlinedExposedDropdownMenuStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_user_type"
            app:errorEnabled="true">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/user_type_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="flagNoExtractUi"
                android:inputType="none"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/log_in"
            app:cornerRadius="5dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>