<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.user.UserDetailsActivity">

    <data>

        <variable
            name="user"
            type="projects.android.myshop.db.entity.UserEntity" />

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:background="#9462c6"
            android:layout_height="wrap_content" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f1f0f7">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/date_register_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:paddingHorizontal="16dp"
                    android:text="Date Register"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_input_layout"
                    style="?attr/textInputOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{user.fullName}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_input_layout"
                    style="?attr/textInputOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="emailAddress"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{user.email}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/post_code_input_layout"
                    style="?attr/textInputOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/postcode">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/post_code_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{user.postcode}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address_input_layout"
                    style="?attr/textInputOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="postalAddress"
                        android:inputType="textPostalAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{user.address}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_input_layout"
                    style="?attr/textInputOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{user.password}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/sign_up"
                    app:cornerRadius="5dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>