<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.product.AdminProductDetailsActivity">

    <data>

        <variable
            name="product"
            type="projects.android.myshop.db.entity.ProductEntity" />

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:background="#9462c6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f1f0f7">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/product_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/product_img"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            android:layout_marginVertical="16dp"
                            app:srcCompat="@drawable/ic_upload" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Product photo"
                            android:textSize="15sp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>
                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/product_name_input_layout"
                    style="?attr/textInputOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/product_name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{product.name}"
                        android:maxLines="1"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/desc_input_layout"
                    style="?attr/textInputOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/desc_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{product.description}"
                        android:maxLines="1"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/price_input_layout"
                    style="?attr/textInputOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/price_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        doubleText="@{product.price}"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/list_price_input_layout"
                    style="?attr/textInputOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/list_price">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/list_price_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        doubleText="@{product.listPrice}"
                        android:maxLines="1"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/retail_price_input_layout"
                    style="?attr/textInputOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/retail_price">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/retail_price_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        doubleText="@{product.retailPrice}"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/add_product"
                    app:cornerRadius="5dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>